[package]
name = "rmk-urchin"
version = "0.1.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

# Split keyboard example
[[bin]]
name = "central"
path = "src/central.rs"

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"

[dependencies]
bt-hci = { version = "0.3", default-features = false, features = ["defmt"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0"
defmt-rtt = "1.0"
embassy-executor = { version = "0.7", features = [
  "arch-cortex-m",
  "defmt",
  "executor-thread",
] }
embassy-nrf = { version = "0.3.1", features = [
  "defmt",
  "gpiote",
  "nfc-pins-as-gpio",
  "nrf52840",
  "time",
  "time-driver-rtc1",
  "unstable-pac",
] }
embassy-time = { version = "0.4", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768"
] }
nrf-mpsl = { version = "0.1.0", default-features = false, features = [
  "critical-section-impl",
  "defmt",
  "nrf52840",
] }
nrf-sdc = { version = "0.1.0", default-features = false, features = [
  "central",
  "defmt",
  "nrf52840",
  "peripheral",
] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
rand = { version = "0.8.4", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6" }
rmk = { version = "0.7", features = [
  "adafruit_bl",
  "async_matrix",
  "nrf52840_ble",
  "split",
] }
static_cell = "2"

[build-dependencies]
const-gen = "1.6"
json = "0.12"
xz2 = "0.1.7"

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "7be9b853e15ca0404d65c623d1ec5795fd96c204" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "7be9b853e15ca0404d65c623d1ec5795fd96c204" }
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "90c6359" }

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
lto = false
panic = "unwind"
codegen-units = 1  # better optimizations

[profile.release]
opt-level = "z"  # optimize for binary size
debug = true  # no overhead for bare-metal
overflow-checks = false
lto = "fat"
codegen-units = 1  # better optimizations
